syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.github.rinotc.protobuf";
option java_outer_classname = "HelloProto";

// The greeting service definition.
service Simple {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloResponse) {}
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}